--- a/Resume.css
+++ b/Resume.css
@@ -21,54 +21,47 @@
 body{
     background: #222;
 }
-.hero-header {
-    width: 100%;
-    height: 100%;
-    min-height: 100vh;
-    background: #222;
-}
-.wrapper {
-    width: 1200px;
-    max-width: 95%;
-    margin: 0 auto;
-    padding: 0 20px;
-}
+
 header{
-    padding: 21px 0 70px;
+    padding: 21px 70px;
+    position: fixed;
     display:flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
+    z-index: 3;
+    background-color: #222;
+    width: 100%;
+    top: -10px;
 }
 .logo {
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 .logo i{
     height: 45px;
     width: 45px;
+    margin-left: -3rem;
     background-color: aqua;
     border-radius: 50%;
     color: rgb(39, 39, 39);
     font-weight: 100;
     font-size: 1.5rem;
     padding: 10px;
-    margin-right: 5px;
+    margin-right: 20px;
     cursor: pointer;
     text-align: center;
 }
 .logo .logo-text{
-    font-size: 24px;
+    font-size: 30px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-weight: 500;
-    color: #ffff;
+    font-weight: bold;
+    color: #ffffff;
 }
 nav .togglebtn{
     width: 35px;
     height: 35px;
     position: absolute;
-    top: 45px;
+    top: 25px;
     right: 3%;
     z-index: 5;
     cursor: pointer;
@@ -85,13 +78,35 @@ nav .togglebtn span{
 }
 nav .navlinks {
     list-style: none;
+    margin-left: 37rem;
+    margin-top: 10px;
 }
 nav .navlinks li{
     display:inline-block;
+    
 }
 nav .navlinks li a{
-    color: aqua;
-    margin-right: 2.8rem;
+    color: #ffffff;
+    padding: 15px;
+    margin: 1rem;
+    font-size: 20px;
+    font-family: 'Courier New', 
+                  Courier, monospace;
+    font-weight: bold;
+    text-align: center;
+    ;            
+}
+nav .navlinks li a:hover{
+    background-color: none;
+    padding: 15px;
+    border-spacing: 2px;
+    border-bottom: 2px solid #028bca;
+}
+nav .navlinks .active {
+    
+    padding: 15px ;
+    border-radius: 1px;
+    border-bottom: 2px solid #028bca;
 }
 .container{
     display: flex;
@@ -101,15 +116,16 @@ nav .navlinks li a{
     width:100%;
     flex-wrap: wrap;
     position: relative; 
-    padding-top: 4rem;
+    padding-top: 5rem;
 }
 .portfolio-z{
     background: #111;
     width: 400px;
     padding: 3rem;
+    border: 2px solid #00b4fc;
     border-radius: 10px;
     min-height: 400px;
-    position: relative;
+    
     color: #fff;
     margin: 15px;
     display: flex;
@@ -122,8 +138,9 @@ nav .navlinks li a{
     overflow: hidden;
 }
 .portfolio-z .portfolio-pic img{
+    border: 2px solid #00b4fc;
     border-radius: 10px;
-    height: 230px;
+    height: 240px;
     width: 200px;
 }
 .portfolio-z .profile-details{
@@ -140,14 +157,17 @@ nav .navlinks li a{
     flex-direction: column;
 }
 .profile-details .intro h2{
-    margin-top: 20px;
+    margin-top: 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .profile-details .intro h4{
     background: #1d1d1d;
-    font-weight: 400;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     border-radius: 4px;
+    
     padding: 5px 10px;
     margin: 8px;
+    cursor: pointer;
 }
 .profile-details .intro .social{
     margin-top: 10px;
@@ -210,17 +230,20 @@ nav .navlinks li a{
     border-radius: 30px;
     margin-top: 1.5rem;
     border: none;
+    cursor: pointer;
 }
 /*****about section*****/
 .about{
     background-color: #111;
     max-width: 800px;
-    padding: 2rem 2rem;
-    border-radius: 20px;
+    padding: 1rem 1rem;
+    border-radius: 10px;
+    border: 3px solid #00b4fc;
+    
 }
 .about h1{
     color: #f2f2f2;
-    margin-bottom: 1.1rem;
+    margin-bottom: 1rem;
     position: relative;
     display: inline-block;
     font-size: 3.5rem;
@@ -228,11 +251,12 @@ nav .navlinks li a{
 .about h1::after{
     position: absolute;
     content: "";
-    top: 50%;
+    top: 40%;
     right: -50%;
     width: 45%;
     height: 3px;
-    background: #00b4fc;
+    background: #00b3f9;
+    
 }
 .about p{
     color: #f3f3f3;
@@ -247,13 +271,22 @@ nav .navlinks li a{
     display: flex;
     justify-content: space-between;
     border-radius: 10px;
-    border: 2px solid #333;
+    border: 2px solid #00b4fc;
     padding: 1rem;
     margin: 1rem;
+    padding-top: 1rem;
 }
 .work .workbox .desc{
     width: 65%;
     color: #f1f1f1;
+}
+.work .workbox .desc ul li{
+    padding: 1rem;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    margin-left: -3rem;
+   
+    
 }
 .work .workbox .Ed {
     width: 75%;
@@ -286,10 +319,36 @@ nav .navlinks li a{
 
 
 /* Responsiv design & displaying navbar for small screen */
-@media(max-width:930px)
+@media(max-width:600px)
 {
     nav .togglebtn{
         display: initial;
+    }
+    .intro h2{
+        font-size: 1.2rem;
+        font-family: 'Courier New', Courier, monospace;
+    }
+    .about{
+        width: max-content;
+        
+    }
+    .about h1::after{
+        position: absolute;
+        content: "";
+        top: 50%;
+        right: -35%;
+        width: 30%;
+        height: 3px;
+        background: #00b3f9;
+
+        
+    }
+    .about h1{
+        font-size: 3rem;
+    
+    }
+    .about .work{
+        display: inline-block;
     }
     /* for toggle button**/
     .click {
@@ -297,7 +356,7 @@ nav .navlinks li a{
     }
     .click span {
         position: absolute;
-        margin-top: 12px;
+        
     }
     .click span:first-child{
         transform: rotate(-45deg);
@@ -312,16 +371,17 @@ nav .navlinks li a{
     }
     nav .navlinks {
         position: absolute;
-        top: 110px;
+        top: 80px;
         right: 100%;
         bottom: 0;
         width: 60%;
         height: 100vh;
         background-color:#222 ;
-        z-index: 3;
+        z-index: 1;
         box-shadow: 5px 13px 30px rgba(0,0,0,0.1);
         transition: 0.5s;
         padding: 25px 0px;
+        
     }
     nav .navlinks li{
         display: block;
@@ -330,6 +390,7 @@ nav .navlinks li a{
         display: block;
         margin-bottom: 15px;
         text-align: center;
+        border: none;
     }
     nav .navlinks.open{
         right: 0;
