--- a/style.css
+++ b/style.css
@@ -41,14 +41,14 @@ header{
     font-weight: 700;
     font-size: 1.5rem;
     padding: 10px;
-    margin-right: 5px;
+    margin-right: 10px;
     cursor: pointer;
     text-align: center;
 }
 .logo .logo-text{
-    font-size: 24px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-weight: 500;
+    font-size: 30px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
     color: #ffffff;
 }
 nav .togglebtn{
@@ -70,21 +70,40 @@ nav .togglebtn span{
     transition: 0.3s;
     transition-property: transform, opacity;
 }
-nav .navlinks {
-    list-style: none;
-}
+
 nav .navlinks li{
     display:inline-block;
+    list-style: none;
 }
 nav .navlinks li a{
-    color: aqua;
-    margin-right: 2.8rem;
+    color: #ffffff;
+    padding: 15px;
+    margin: 1rem;
+    font-size: 20px;
+    font-family: 'Courier New', 
+                  Courier, monospace;
+    font-weight: bold;
+    text-align: center;             
+}
+nav .navlinks li a:hover{
+    background-color: none;
+    padding: 15px;
+    
+    border-radius: 1px;
+    border-bottom: 2px solid #028bca;
+}
+nav .navlinks .active {
+    
+    padding: 15px ;
+    border-radius: 1px;
+    border-bottom: 2px solid #028bca;
 }
 .container {
     display: flex;
     justify-content: space-around;
     align-items: center;
     padding-top: 4rem;
+    
 }
 .container .hero-pic {
     width: 300px;
@@ -149,8 +168,8 @@ nav .navlinks li a{
     color: #ffff;
 }
 /* Responsiv design & displaying navbar for small screen */
-@media(max-width:930px)
-{
+@media(max-width:700px)
+{  
     nav .togglebtn{
         display: initial;
     }
@@ -197,9 +216,18 @@ nav .navlinks li a{
     nav .navlinks.open{
         right: 0;
     }
+   
 }
-@media(max-width:760px)
+@media screen and (max-width:760px)
 {
+    .navlinks li a{
+        color: #04d9ff;
+        font-size: 20px;
+        font-family: 'Courier New', 
+                      Courier, monospace;
+        font-weight: bold;
+        border-bottom: none;
+    }
     .container{
         flex-direction: column;
         padding-top: 2rem;
