--- a/Resume.css
+++ b/Resume.css
@@ -319,8 +319,11 @@ nav .navlinks .active {
 
 
 /* Responsiv design & displaying navbar for small screen */
-@media(max-width:600px)
+@media screen and (max-width:570px)
 {
+    .logo-text{
+        display: none;
+    }
     nav .togglebtn{
         display: initial;
     }
